# napari-spot-detector

./: LICENSE  README.md  plugin_tutorial.md  setup.cfg  tox.ini
examples/: spot_detector.ipynb
napari_spot_detector/: __init__.py  _function.py
napari_spot_detector/_tests/: test_function.py  test_reader.py
