[metadata]
name = napari-spot-detector
version = 0.0.1
author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3
url = https://github.com/kevinyamauchi/napari-spot-detector
description = A simple spot detection plugin.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/napari-spot-detector/issues
    Documentation = https://github.com/kevinyamauchi/napari-spot-detector#README.md
    Source Code = https://github.com/kevinyamauchi/napari-spot-detector
    User Support = https://github.com/kevinyamauchi/napari-spot-detector/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-spot-detector = napari_spot_detector
